More analysis